@@ -137,7 +137,20 @@
 		   <version>3.0</version>
 		   <scope>test</scope>
 		</dependency>
-
+	 
+	  <dependency>
+	    <groupId>com.googlecode.gwt-test-utils</groupId>
+	    <artifactId>gwt-test-utils</artifactId>
+	    <version>0.47</version>
+	  </dependency>
+	  
+	  <dependency>
+		  <groupId>org.mockito</groupId>
+		  <artifactId>mockito-core</artifactId>
+		  <version>1.9.5</version>
+		  <scope>test</scope>
+		</dependency>
+  
 		<dependency>
 			<groupId>org.timepedia.exporter</groupId>
 			<artifactId>gwtexporter</artifactId>
@@ -228,6 +241,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.5</version>
 				<configuration>
+          <argLine>-Xmx512M -XX:MaxPermSize=128M</argLine>
 					<additionalClasspathElements>
 						<additionalClasspathElement>${project.build.sourceDirectory}</additionalClasspathElement>
 						<additionalClasspathElement>${project.build.testSourceDirectory}</additionalClasspathElement>
